--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -10,13 +10,14 @@ jobs:
   test:
     strategy:
       matrix:
-        version: [1.16.x, 1.17.x, 1.18.x]
+        go: ['1.16', '1.17', '1.18.0-rc1']
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: ${{ matrix.go }}
+          stable: false
       - name: Checkout code
         uses: actions/checkout@v1
       - name: golangci-lint
