dep: update go-client v1.3.0
Signed-off-by: Marko Kungla <marko.kungla@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 .env
 covprofile.coverprofile
 coverage.txt
+go.work
+go.work.sum
 
 ################################################################################
 # DIRECTORIES to ignore
