--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,7 +25,7 @@ builds:
       - CGO_ENABLED=0
     ignore:
       - goos: darwin
-        goarch: 386
+        goarch: '386'
       - goos: freebsd
         goarch: arm64
     main: ./
@@ -41,12 +41,6 @@ archives:
     files:
       - LICENSE
       - README.md
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
 
 universal_binaries:
 - replace: false
