--- a/.github/workflows/semantic-pull-request.yml
+++ b/.github/workflows/semantic-pull-request.yml
@@ -32,6 +32,7 @@ jobs:
             style
             test
             next
+            deprecate
           # Configure which scopes are allowed.
           scopes: |
             endpoint
